# DD_tech_challenge

./: .env_template  SOLUTION.md  docker-compose.yml
.github/workflows/: aws.yml
modules/de/dags/: create_feature_store.py  create_monthly_avg_sales.py  load_client_data.py  load_sales_data.py
modules/de/dags/sql/: aggregate_month_avg_sales.sql  create_monthly_avg_sales_table.sql
modules/de/db_admin/: setup_users.sql
modules/de/docker/: Dockerfile
modules/de/plugins/: get_conn_string.py  get_files.py
modules/deployment/: example_request.py  example_request_outer.py  setup.sh
modules/deployment/flask_app/: app.py
modules/ds/docker/: Dockerfile  main.py  requirements.txt  setup.sh  training_config.json  utils.py
modules/ds/docker/ds_package/: README.md  pyproject.toml  setup.cfg
modules/ds/docker/ds_package/src/data_science/: ds_model.py
modules/ds/models/: model.joblib
modules/mle/mle_package/: pyproject.toml
modules/mle/mle_package/src/machine_learning_engineering/: mle_model.py
