[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ds_package"
version = "0.1.0"
authors = [
  { name="Paco", email="paco@daredata.engineering" },
]
description = "Data Science Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
